# llms-txt-generator

./: .gitignore  ARCHITECTURE.md  BACKEND_WORKFLOW.md  INITIAL_SCAFFOLDING.md  README.md
.claude/: settings.json
.claude/agent-memory/backend-ai-engineer/: MEMORY.md
.claude/agent-memory/profound-frontend-engineer/: MEMORY.md
.claude/agents/: backend-ai-engineer.md  profound-frontend-engineer.md
backend/: .env.example  =0.13.0  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/db/: __init__.py  cache.py  client.py  generation_store.py  jobs.py  memory.py  repository.py  supabase_store.py
backend/app/models/: __init__.py  base.py  generation.py
backend/app/prompts/: categorize.py  reprompt.py  summarize.py
backend/app/routers/: favicon.py  generate.py  generations.py  validate.py
backend/app/services/: content_fetcher.py  crawler.py  errors.py  extractor.py  generator.py  html.py  http.py  pipeline.py  progress.py  url_utils.py  validator.py
backend/app/services/llm/: anthropic.py  base.py  factory.py  openai.py  utils.py
backend/app/services/pipeline/: __init__.py  dag.py  node.py  nodes.py
backend/app/testing/: mock_llm.py
backend/tests/: test_cache.py  test_errors.py  test_generator.py  test_url_utils.py  test_validator.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: Editor.tsx  EditorPreview.tsx  ExportBar.tsx  Layout.tsx  PipelineProgress.tsx  PostDownloadModal.tsx  Preview.tsx  ProfoundImport.tsx  ProgressView.tsx  (+4 more)
(+10 files in other folders)
